--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,21 +1,23 @@
 .dialogs {
     display: grid;
     grid-template-columns: 2fr 10fr;
+    padding: 20px 20px;
 }
 
 .dialogsItems {
-    padding: 10px;
+
 }
-.dialogsItems.active {
+
+.dialog a {
+    text-decoration: none;
+    color: white;
+}
+
+.dialog a.active {
     color: gold;
 }
 
-.dialog {
-
-}
-
 .messages {
-    padding: 10px;
 }
 
 .message {
