--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,6 +1,6 @@
 .dialogs {
     display: grid;
-    grid-template-columns: 2fr 10fr;
+    grid-template-columns: 3fr 10fr;
     padding: 20px 20px;
 }
 
@@ -11,16 +11,34 @@
 .dialog a {
     text-decoration: none;
     color: white;
+    /*border: 1px solid blue;*/
 }
 
 .dialog a.active {
     color: gold;
 }
 
+.img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+
+}
 .messages {
+    margin-left: 10px;
+    border-left: 1px solid chocolate;
+    padding-left: 10px;
 }
 
 .message {
+/*border: 1px solid black;*/
 
+}
+.dialog {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    /*border: 1px solid red;*/
 }
 
