--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app-wrapper{
-  margin: 0 auto;
+  margin: 0px 20% auto;
   display: grid;
-  width:  1100px;
+  width: auto;
   grid-template-areas: 
   "h h"
   "n c";
@@ -12,7 +12,7 @@
 
 
 .headerImage {
-  width: 909px;
+  width: 945px;
   height: 200px;
 }
 .app-wrapper-content {
