--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -25,13 +25,12 @@
     display: inline-block;
     width: 35px;
     height: 35px;
-    margin: 5px;
-    margin-top: 10px;
+    margin: 10px 5px 5px;
     border-radius: 50%;
     background: silver;
+    border: 1px solid silver;
 }
 
 .friendsComponent:hover {
-    /*display: inline-block;*/
-    border: 1px solid red;
+    border-color: red;
 }
