--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -4,7 +4,14 @@
     border-radius: 50%;
 }
 
-.selectedPage{
-    font-weight: bold;
+.pagePointer {
+    cursor: pointer;
+    margin: 0 5px;
 }
+
+.pagePointer:hover, .activePagePointer {
+    opacity: 0.8;
+    color: white;
+}
+
 
